fixed browse layout bug

--- a/src/app/components/browse/browse.component.less
+++ b/src/app/components/browse/browse.component.less
@@ -18,6 +18,11 @@ button, .button-margin {
 
 .row{
     margin-bottom: 20px;
+    margin-right: 0;
+}
+
+#v-pills-run_information{
+  margin-bottom: 1.3%;
 }
 
 .container-sidebar{
@@ -29,7 +34,7 @@ button, .button-margin {
 
 .container{
     margin: 0 auto;
-    margin-left: 20%;
+   // margin-left: 20%;
     margin-bottom: 3.7%;
     margin-right: 0;
     padding-right: 0;
@@ -229,6 +234,7 @@ button, .button-margin {
   .container-titel{
     margin-left: 350px;
     margin-right: 0px;
+    margin-bottom: 3.7%;
 
     .h1{
       text-align: left;
